--- a/other_datasets/mathvista_paperqa_test.ipynb
+++ b/other_datasets/mathvista_paperqa_test.ipynb
@@ -2,40 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2b124072",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
+    "import numpy as np\n",
     "\n",
     "ds = load_dataset(\"AI4Math/MathVista\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c0390e16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['testmini', 'test'])"
+       "DatasetDict({\n",
+       "    testmini: Dataset({\n",
+       "        features: ['pid', 'question', 'image', 'decoded_image', 'choices', 'unit', 'precision', 'answer', 'question_type', 'answer_type', 'metadata', 'query'],\n",
+       "        num_rows: 1000\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['pid', 'question', 'image', 'decoded_image', 'choices', 'unit', 'precision', 'answer', 'question_type', 'answer_type', 'metadata', 'query'],\n",
+       "        num_rows: 5141\n",
+       "    })\n",
+       "})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds.keys()"
+    "ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9dae9353",
    "metadata": {},
    "outputs": [],
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "968713dd",
    "metadata": {},
    "outputs": [
@@ -201,7 +211,7 @@
        "4  Hint: Please answer the question and provide t...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "3fd9b0c5",
    "metadata": {},
    "outputs": [
@@ -220,18 +230,18 @@
      "data": {
       "text/plain": [
        "{'category': 'general-vqa',\n",
-       " 'context': 'natural image',\n",
+       " 'context': 'bar chart',\n",
        " 'grade': 'daily life',\n",
-       " 'img_height': 936,\n",
-       " 'img_width': 664,\n",
+       " 'img_height': 448,\n",
+       " 'img_width': 448,\n",
        " 'language': 'english',\n",
-       " 'skills': array(['arithmetic reasoning', 'numeric commonsense'], dtype=object),\n",
-       " 'source': 'KVQA',\n",
+       " 'skills': array(['statistical reasoning'], dtype=object),\n",
+       " 'source': 'DVQA',\n",
        " 'split': 'test',\n",
-       " 'task': 'visual question answering'}"
+       " 'task': 'figure question answering'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,24 +252,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3c5b46a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['abstract scene', 'bar chart', 'document image', 'function plot',\n",
+       "       'geometry diagram', 'heatmap chart', 'line plot', 'map chart',\n",
+       "       'medical image', 'natural image', 'pie chart', 'puzzle test',\n",
+       "       'radar chart', 'scatter plot', 'scientific figure',\n",
+       "       'synthetic scene', 'table', 'word cloud'], dtype='<U17')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contexts = []\n",
+    "sources = []\n",
+    "for i in range(len(df)):\n",
+    "    context = df.iloc[i]['metadata']['context']\n",
+    "    contexts.append(context)\n",
+    "    source = df.iloc[i]['metadata']['source']\n",
+    "    sources.append(source)\n",
+    "\n",
+    "np.unique(contexts)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "350d698e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abstract scene, bar chart, document image, function plot, geometry diagram, heatmap chart, line plot, map chart, medical image, natural image, pie chart, puzzle test, radar chart, scatter plot, scientific figure, synthetic scene, table, word cloud, \n"
+     ]
+    }
+   ],
+   "source": [
+    "# make string\n",
+    "sout = ''\n",
+    "for s in np.unique(contexts):\n",
+    "    sout += s + ', '\n",
+    "\n",
+    "print(sout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7fa18de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A-OKVQA', 'AI2D', 'CLEVR-Math', 'ChartQA', 'DVQA', 'DocVQA',\n",
+       "       'FigureQA', 'FunctionQA', 'GEOS', 'GeoQA+', 'Geometry3K', 'IQTest',\n",
+       "       'IconQA', 'KVQA', 'MapQA', 'PMC-VQA', 'PaperQA', 'ParsVQA-Caps',\n",
+       "       'PlotQA', 'SciBench', 'ScienceQA', 'Super-CLEVR', 'TQA', 'TabMWP',\n",
+       "       'TextVQA', 'TheoremQA', 'UniGeo', 'VQA-AS', 'VQA-RAD', 'VQA2.0',\n",
+       "       'VizWiz'], dtype='<U12')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(sources)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2d04b72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/JCDL2025/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(df)):\n",
+    "    source = df.iloc[i]['metadata']['source']\n",
+    "    if source == 'IQTest':\n",
+    "        import sys; sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5dd1ef9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pid                                                           1037\n",
+       "question         Which of the shapes is the mirror image of the...\n",
+       "image                                              images/1037.jpg\n",
+       "decoded_image    {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...\n",
+       "choices                                            [A, B, C, D, E]\n",
+       "unit                                                          None\n",
+       "precision                                                      NaN\n",
+       "answer                                                            \n",
+       "question_type                                         multi_choice\n",
+       "answer_type                                                   text\n",
+       "metadata         {'category': 'math-targeted-vqa', 'context': '...\n",
+       "query            Hint: Please answer the question and provide t...\n",
+       "Name: 36, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "93e5280e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'category': 'math-targeted-vqa',\n",
+       " 'context': 'puzzle test',\n",
+       " 'grade': 'elementary school',\n",
+       " 'img_height': 542,\n",
+       " 'img_width': 285,\n",
+       " 'language': 'english',\n",
+       " 'skills': array(['logical reasoning'], dtype=object),\n",
+       " 'source': 'IQTest',\n",
+       " 'split': 'test',\n",
+       " 'task': 'figure question answering'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[i]['metadata']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa18de7",
+   "id": "8655430a",
    "metadata": {},
    "outputs": [],
    "source": []
