--- a/paper_plots_and_calcs.ipynb
+++ b/paper_plots_and_calcs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "ae6e905a",
    "metadata": {},
    "outputs": [],
@@ -262,12 +262,12 @@
    "id": "2d4d0a7d",
    "metadata": {},
    "source": [
-    "## Plot with residuals"
+    "## Plot with residuals -- Medians"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "0f23aa20",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "e338a6af",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "ea5e4c07",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
    "id": "78814ee1",
    "metadata": {},
    "source": [
-    "Using the following to figure out what to say about the residuals: \n",
+    "A few reminders to jog the memory about residuals: \n",
     "* https://www.youtube.com/watch?v=41l3AAV35zk\n",
     "* https://www.datacamp.com/tutorial/qq-plot\n",
     "\n",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "183852d3",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "575f0605",
    "metadata": {},
    "outputs": [
@@ -562,12 +562,12 @@
    "id": "bec1df66",
    "metadata": {},
    "source": [
-    "So, overall, probably definitely not normal, but based on the plots above, they are certainly normal-ish."
+    "So, overall, probably definitely not normal, but based on the plots above, they are certainly normal-ish.  To be safe, let's do a non parametric test for a difference of medians (note -- not means here, medians)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "8311c248",
    "metadata": {},
    "outputs": [
@@ -597,25 +597,131 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1c6de318",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Let's also test the difference in varience -- i.e. do the variences differ from one another.  Let's use Levene's test since we have slightly non-normal distributions."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "42019903",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject the null hypothesis: There is a significant difference between group variances.\n"
+     ]
+    }
+   ],
+   "source": [
+    "levene_stat = 'median'\n",
+    "\n",
+    "stat, p_lev = stats.levene(residuals_a1, residuals_a2, llm_residuals, center=levene_stat)\n",
+    "if p_lev < 0.05:\n",
+    "    print(\"Reject the null hypothesis: There is a significant difference between group variances.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: No significant difference found between group variances.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffcd70ec",
+   "metadata": {},
+   "source": [
+    "Let's figure out which comparisons lead to the difference:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "33d33f5c",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "resids_compare = {'A1':residuals_a1, 'A2':residuals_a2, 'LLM':llm_residuals}\n",
+    "\n",
+    "pvalues_compare = {}\n",
+    "for l1,r1 in resids_compare.items():\n",
+    "    for l2,r2 in resids_compare.items():\n",
+    "        if l1 != l2:\n",
+    "            stat, p_lev = stats.levene(r1,r2, center=levene_stat)\n",
+    "            # make sure its not repeated\n",
+    "            if (l1+'-'+l2 not in pvalues_compare) and (l2+'-'+l1 not in pvalues_compare):\n",
+    "                pvalues_compare[l1+'-'+l2] = p_lev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ce398449",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A1-A2': 2.324255859313614e-05,\n",
+       " 'A1-LLM': 0.4355795788296817,\n",
+       " 'A2-LLM': 6.150945571527052e-05}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pvalues_compare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ba799549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comparisons: ['A1-A2', 'A1-LLM', 'A2-LLM']\n",
+      "Original P-values: [2.324255859313614e-05, 0.4355795788296817, 6.150945571527052e-05]\n",
+      "Holm-adjusted P-values: [6.97276758e-05 4.35579579e-01 1.23018911e-04]\n",
+      "Rejection decisions (Holm): [ True False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.multitest import multipletests\n",
+    "\n",
+    "# Example p-values from multiple pairwise Levene's tests\n",
+    "p_values = list(pvalues_compare.values()) #[0.01, 0.005, 0.03] # Example p-values from pairwise comparisons\n",
+    "\n",
+    "# Apply Bonferroni-Holm correction\n",
+    "reject, pvals_corrected, alphac_sidak, alphac_bonf = multipletests(p_values, alpha=0.05, method='holm')\n",
+    "\n",
+    "print('comparisons:', list(pvalues_compare.keys()))\n",
+    "print(f\"Original P-values: {p_values}\")\n",
+    "print(f\"Holm-adjusted P-values: {pvals_corrected}\")\n",
+    "print(f\"Rejection decisions (Holm): {reject}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57912d1c",
+   "metadata": {},
+   "source": [
+    "So, it looks like the LLM and annotator 1 have around the same spread, while annotator 2 is the spread that is different from both of those."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffcd70ec",
+   "id": "e3e9a5a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -623,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d33f5c",
+   "id": "71b828f9",
    "metadata": {},
    "outputs": [],
    "source": []
