starting to clean

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "f25dda74-0b62-4a27-9566-aaaa27727c96",
    "metadata": {},
    "outputs": [],
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dir_api = '/Users/jnaiman/Dropbox/Paper_JCDL2025/chatgpt_api/' # where to store API results\n",
+    "dir_api = '/Users/jnaiman/Dropbox/Paper_JCDL2025/chatgpt_api/' # where to store API results\n",
     "\n",
-    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_mini/' #store API results for example-hists\n",
+    "#dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_mini/' #store API results for example-hists\n",
     "\n",
     "key_file = '/Users/jnaiman/.openai/key.txt'\n",
     "\n",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -3260,8 +3260,8 @@
     "test_run = False # run w/o actually pinging openai\n",
     "restart = False\n",
     "#model =\"gpt-4o-mini\"\n",
-    "#model = \"gpt-5-nano-2025-08-07\"\n",
-    "model = \"gpt-5-mini-2025-08-07\"\n",
+    "model = \"gpt-5-nano-2025-08-07\"\n",
+    "#model = \"gpt-5-mini-2025-08-07\"\n",
     "\n",
     "subset_questions_by_keys = ['median', 'ngaussians'] # set to None to do all questions\n",
     "\n",
