--- a/chatgpt/chatgpt_withapi_fewshot.ipynb
+++ b/chatgpt/chatgpt_withapi_fewshot.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## ChatGPT with Few Shot\n",
     "\n",
-    "Include some examples for ChatGPT of histograms."
+    "Include some examples for ChatGPT of histograms.\n",
+    "\n",
+    "**NOTE:** this is left here for reference, but not used in the paper (lack of improvement in results AND many other works indicating the lack of improvement as well for fewshot and images generally)."
    ]
   },
   {
