--- a/explore_zooniverse_data.ipynb
+++ b/explore_zooniverse_data.ipynb
@@ -1055,9 +1055,173 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4569bbc8",
+   "metadata": {},
+   "source": [
+    "Any weirdos?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "8598daf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>annotators</th>\n",
+       "      <th>image file</th>\n",
+       "      <th>Human nGaussians</th>\n",
+       "      <th>Human median (number)</th>\n",
+       "      <th>Human median (draw)</th>\n",
+       "      <th>Ground Truth nGaussians</th>\n",
+       "      <th>Ground Truth Median</th>\n",
+       "      <th>Ground Truth nBars</th>\n",
+       "      <th>LLM nGaussians</th>\n",
+       "      <th>LLM Median</th>\n",
+       "      <th>LLM nGaussians (int)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [annotators, image file, Human nGaussians, Human median (number), Human median (draw), Ground Truth nGaussians, Ground Truth Median, Ground Truth nBars, LLM nGaussians, LLM Median, LLM nGaussians (int)]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[df2['LLM nGaussians (int)'] > 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e755d4a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>annotators</th>\n",
+       "      <th>image file</th>\n",
+       "      <th>Human nGaussians</th>\n",
+       "      <th>Human median (number)</th>\n",
+       "      <th>Human median (draw)</th>\n",
+       "      <th>Ground Truth nGaussians</th>\n",
+       "      <th>Ground Truth Median</th>\n",
+       "      <th>Ground Truth nBars</th>\n",
+       "      <th>LLM nGaussians</th>\n",
+       "      <th>LLM Median</th>\n",
+       "      <th>LLM nGaussians (int)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>annotator1</td>\n",
+       "      <td>id_0068.jpeg</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.035531</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.021979</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>annotator2</td>\n",
+       "      <td>id_0068.jpeg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.004829</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.021979</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     annotators    image file  Human nGaussians  Human median (number)  \\\n",
+       "23   annotator1  id_0068.jpeg                 2                    0.0   \n",
+       "123  annotator2  id_0068.jpeg                 3                    0.0   \n",
+       "\n",
+       "     Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \\\n",
+       "23             -0.035531                        1            -0.021979   \n",
+       "123            -0.004829                        1            -0.021979   \n",
+       "\n",
+       "     Ground Truth nBars LLM nGaussians  LLM Median  LLM nGaussians (int)  \n",
+       "23                   50              3        70.0                     3  \n",
+       "123                  50              3        70.0                     3  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[ (df2['LLM Median'] < -1.0) | (df2['LLM Median'] > 1.0) ]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e755d4a7",
+   "id": "91bdac1f",
    "metadata": {},
    "outputs": [],
    "source": []
