about to run gpt mini

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
    "source": [
     "#####dir_api = '/Users/jnaiman/Dropbox/Paper_JCDL2025/chatgpt_api/' # where to store API results\n",
     "\n",
-    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists\n",
-    "model = \"gpt-5-nano-2025-08-07\"\n",
+    "# dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists\n",
+    "# model = \"gpt-5-nano-2025-08-07\"\n",
     "\n",
-    "#dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_mini/' #store API results for example-hists\n",
-    "#model = \"gpt-5-mini-2025-08-07\"\n",
+    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_mini/' #store API results for example-hists\n",
+    "model = \"gpt-5-mini-2025-08-07\"\n",
     "\n",
     "key_file = '/Users/jnaiman/.openai/key.txt'\n",
     "\n",
