paper plots and calcs

--- a/paper_plots_and_calcs.ipynb
+++ b/paper_plots_and_calcs.ipynb
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 172,
    "id": "1d10a901",
    "metadata": {},
    "outputs": [
@@ -2070,35 +2070,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------- nBARS BIN:  45  ----------------------\n",
-      "Fail to reject the null hypothesis: No significant difference found between group variances.\n",
-      "---------- nBARS BIN:  60  ----------------------\n",
-      "Fail to reject the null hypothesis: No significant difference found between group variances.\n",
       "---------- nBARS BIN:  10  ----------------------\n",
-      "Fail to reject the null hypothesis: No significant difference found between group variances.\n",
+      "Fail to reject the null hypothesis: No significant difference found between group medians of residuals.\n",
       "---------- nBARS BIN:  20  ----------------------\n",
-      "Fail to reject the null hypothesis: No significant difference found between group variances.\n"
+      "Fail to reject the null hypothesis: No significant difference found between group medians of residuals.\n",
+      "---------- nBARS BIN:  45  ----------------------\n",
+      "Fail to reject the null hypothesis: No significant difference found between group medians of residuals.\n",
+      "---------- nBARS BIN:  60  ----------------------\n",
+      "Fail to reject the null hypothesis: No significant difference found between group medians of residuals.\n"
      ]
     }
    ],
    "source": [
-    "bar_bins = dfb['Ground Truth nBars'].unique()\n",
+    "bar_bins = np.sort(dfb['Ground Truth nBars'].unique())\n",
+    "\n",
+    "test_on = 'medians of residuals'\n",
     "\n",
     "for bin_number in bar_bins:\n",
     "    print('---------- nBARS BIN: ', bin_number, ' ----------------------')\n",
     "    dfsub = dfb[dfb['Ground Truth nBars']==bin_number]\n",
-    "    a1 = dfsub[dfsub['annotators']=='annotator1']['Human median (draw)']\n",
-    "    a2 = dfsub[dfsub['annotators']=='annotator2']['Human median (draw)']\n",
-    "    almm = dfsub[dfsub['annotators']=='annotator1']['LLM Median']\n",
+    "    a1 = dfsub[dfsub['annotators']=='annotator1']['Human median (draw)']-dfsub[dfsub['annotators']=='annotator1']['Ground Truth Median']\n",
+    "    a2 = dfsub[dfsub['annotators']=='annotator2']['Human median (draw)']-dfsub[dfsub['annotators']=='annotator2']['Ground Truth Median']\n",
+    "    almm = dfsub[dfsub['annotators']=='annotator1']['LLM Median']-dfsub[dfsub['annotators']=='annotator1']['Ground Truth Median']\n",
     "\n",
     "    # test for significance\n",
     "    stat, p_lev = kruskal(a1,a2,almm)\n",
     "    #stat, p_lev = stats.levene(a1,a2,almm, center=levene_stat) ### UPDATE CALC\n",
     "\n",
     "    if p_lev < 0.05:\n",
-    "        print(\"Reject the null hypothesis: There IS a significant difference between group variances.\")\n",
+    "        print(\"Reject the null hypothesis: There IS a significant difference between group \"+test_on+\".\")\n",
     "    else:\n",
-    "        print(\"Fail to reject the null hypothesis: No significant difference found between group variances.\")   \n",
+    "        print(\"Fail to reject the null hypothesis: No significant difference found between group \"+test_on+\".\")   \n",
     "        continue \n",
     "\n",
     "    comparisons = {'A1':a1, 'A2':a2, 'LLM':almm} #, 'LLM Mini':llm_mini_residuals}\n",
@@ -2134,11 +2136,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "id": "7b10635c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- nBARS BIN:  10  ----------------------\n",
+      "Reject the null hypothesis: There IS a significant difference between group variance of residuals.\n",
+      "comparisons: ['A1-A2', 'A1-LLM', 'A2-LLM']\n",
+      "Significant difference?: ['NO', 'NO', 'NO']\n",
+      "Original P-values: [0.023065912650479536, 0.17029900698245753, 0.07698660597796975]\n",
+      "Holm-adjusted P-values: [0.06919774 0.17029901 0.15397321]\n",
+      "Rejection decisions (Holm): [False False False]\n",
+      "\n",
+      "---------- nBARS BIN:  20  ----------------------\n",
+      "Reject the null hypothesis: There IS a significant difference between group variance of residuals.\n",
+      "comparisons: ['A1-A2', 'A1-LLM', 'A2-LLM']\n",
+      "Significant difference?: ['YES', 'NO', 'NO']\n",
+      "Original P-values: [0.007494107904658284, 0.09561926360884883, 0.048055659160128876]\n",
+      "Holm-adjusted P-values: [0.02248232 0.09611132 0.09611132]\n",
+      "Rejection decisions (Holm): [ True False False]\n",
+      "\n",
+      "---------- nBARS BIN:  45  ----------------------\n",
+      "Fail to reject the null hypothesis: No significant difference found between group variance of residuals.\n",
+      "\n",
+      "---------- nBARS BIN:  60  ----------------------\n",
+      "Fail to reject the null hypothesis: No significant difference found between group variance of residuals.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_on = 'variance of residuals'\n",
+    "\n",
+    "for bin_number in bar_bins:\n",
+    "    print('---------- nBARS BIN: ', bin_number, ' ----------------------')\n",
+    "    dfsub = dfb[dfb['Ground Truth nBars']==bin_number]\n",
+    "    a1 = dfsub[dfsub['annotators']=='annotator1']['Human median (draw)']-dfsub[dfsub['annotators']=='annotator1']['Ground Truth Median']\n",
+    "    a2 = dfsub[dfsub['annotators']=='annotator2']['Human median (draw)']-dfsub[dfsub['annotators']=='annotator2']['Ground Truth Median']\n",
+    "    almm = dfsub[dfsub['annotators']=='annotator1']['LLM Median']-dfsub[dfsub['annotators']=='annotator1']['Ground Truth Median']\n",
+    "\n",
+    "    # test for significance\n",
+    "    #stat, p_lev = kruskal(a1,a2,almm)\n",
+    "    stat, p_lev = stats.levene(a1,a2,almm, center=levene_stat) ### UPDATE CALC\n",
+    "\n",
+    "    if p_lev < 0.05:\n",
+    "        print(\"Reject the null hypothesis: There IS a significant difference between group \"+test_on+\".\")\n",
+    "    else:\n",
+    "        print(\"Fail to reject the null hypothesis: No significant difference found between group \"+test_on+\".\")   \n",
+    "        print('')\n",
+    "        continue \n",
+    "\n",
+    "    comparisons = {'A1':a1, 'A2':a2, 'LLM':almm} #, 'LLM Mini':llm_mini_residuals}\n",
+    "\n",
+    "    pvalues_compare = {}\n",
+    "    for l1,r1 in comparisons.items():\n",
+    "        for l2,r2 in comparisons.items():\n",
+    "            if l1 != l2:\n",
+    "                stat, p_lev = stats.levene(r1,r2, center=levene_stat) ### UPDATE CALC\n",
+    "                #stat, p_lev = kruskal(r1,r2) ### UPDATE CALC\n",
+    "                # make sure its not repeated\n",
+    "                if (l1+'-'+l2 not in pvalues_compare) and (l2+'-'+l1 not in pvalues_compare):\n",
+    "                    pvalues_compare[l1+'-'+l2] = p_lev\n",
+    "\n",
+    "    # Example p-values from multiple pairwise Levene's tests\n",
+    "    p_values = list(pvalues_compare.values()) #[0.01, 0.005, 0.03] # Example p-values from pairwise comparisons\n",
+    "\n",
+    "    # Apply Bonferroni-Holm correction\n",
+    "    reject, pvals_corrected, alphac_sidak, alphac_bonf = multipletests(p_values, alpha=0.05, method='holm')\n",
+    "\n",
+    "    print('comparisons:', list(pvalues_compare.keys()))\n",
+    "    difference = []\n",
+    "    for r in reject:\n",
+    "        if r:\n",
+    "            difference.append(\"YES\")\n",
+    "        else:\n",
+    "            difference.append(\"NO\")\n",
+    "    print(f\"Significant difference?: {difference}\")\n",
+    "    print(f\"Original P-values: {p_values}\")\n",
+    "    print(f\"Holm-adjusted P-values: {pvals_corrected}\")\n",
+    "    print(f\"Rejection decisions (Holm): {reject}\")\n",
+    "    print('')"
+   ]
   },
   {
    "cell_type": "code",
